--- a/docker/demo/conf/configuration.json
+++ b/docker/demo/conf/configuration.json
@@ -2,7 +2,7 @@
 	'dao'  : 'itop',
 	'itop' : {
 		'url'      		: 'http://localhost/itop/webservices/rest.php?version=1.3',
-		'user'     		: 'admin',
+		'login'    		: 'admin',
 		'password' 		: 'admin',
 		'version'  		: '1.3',
 		'organisation'  : 'Demo'
