Trying some jekyll tests

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-remote_theme: benbalter/retlab
+encoding: UTF-8
+theme: jekyll-theme-modernist
+plugins:
+   - jekyll-mentions
+   - jemoji
+   - jekyll-redirect-from
+   - jekyll-sitemap
+   - jekyll-feed
